Active navitem + overflow correction

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,12 +20,14 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   color: var(--dark-font);
   background: white;
   font-feature-settings: "rlig" 1, "calt" 1;
+  overflow-x: hidden;
 }
 
 .container {
